Setup jaeger trace for user_svc

--- a/user_svc/src/.env
+++ b/user_svc/src/.env
@@ -1,5 +1,5 @@
 DB_HOST=127.0.0.1
-DB_PORT=3309
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=rootpass
-DB_NAME=user
+DB_PASSWORD='a7CA\WP!B=ry;Q2
+DB_NAME=users
