--- a/user_svc/Dockerfile
+++ b/user_svc/Dockerfile
@@ -3,6 +3,9 @@ FROM golang:1.18-alpine AS build
 ADD ./src /app
 WORKDIR /app
 
+RUN apk update
+RUN apk add build-base
+
 RUN go mod download
 
 RUN go build -o /user_svc
