--- a/.github/workflows/orchest_wf.yml
+++ b/.github/workflows/orchest_wf.yml
@@ -1,10 +1,11 @@
-name: Build Backend CI
+name: Build orchest CI
 
 on:
   workflow_dispatch:
   push:
     branches: [ main ]
-    paths: [ backend/** ]
+    paths: [ orchest/** ]
+
 
 env:
   REGISTRY: ghcr.io
@@ -29,11 +30,11 @@ jobs:
       run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
     - name: Build the Docker image
       run: |
-        cd backend && \
+        cd orchest && \
         docker build . --file Dockerfile \
-        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-backend:${{ steps.vars.outputs.sha_short }} \
-        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-backend:latest
+        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-orchest:${{ steps.vars.outputs.sha_short }} \
+        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-orchest:latest
     - name: Publish the images
       run: | 
-        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-backend:${{ steps.vars.outputs.sha_short }}
-        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-backend:latest
+        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-orchest:${{ steps.vars.outputs.sha_short }}
+        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/pfinal-orchest:latest
