--- a/k8s/backend-app.yaml
+++ b/k8s/backend-app.yaml
@@ -1,3 +1,16 @@
+kind: Service
+apiVersion: v1
+metadata:
+  name: rush-hour-backend
+spec:
+  selector:
+    app: rush-hour-backend
+  type:  ClusterIP
+  ports:
+  - name:  http
+    port:  80
+    targetPort:  8088
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,5 +34,7 @@ spec:
       containers:
       - name: backend-api
         image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-backend:latest
+        ports:
+          - containerPort:         
       imagePullSecrets:
       - name: rush-hour-dockerconfigjson
