--- a/k8s/02-kafka.yaml
+++ b/k8s/02-kafka.yaml
@@ -36,9 +36,9 @@ spec:
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: 10.108.140.26:2181
         - name: KAFKA_LISTENERS
-          value: PLAINTEXT://:9092
+          value: PLAINTEXT://127.0.0.1:9092
         - name: KAFKA_ADVERTISED_LISTENERS
-          value: PLAINTEXT://kafka-broker:9092
+          value: PLAINTEXT_INTERNAL://broker:29092
         image: wurstmeister/kafka
         imagePullPolicy: IfNotPresent
         name: kafka-broker
