--- a/k8s/order-app.yaml
+++ b/k8s/order-app.yaml
@@ -7,9 +7,9 @@ spec:
     app: rush-hour-order
   type:  ClusterIP
   ports:
-  - name:  http
-    port:  80
-    targetPort:  3333
+  - name: http
+    port: 80
+    targetPort: 3333
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -32,24 +32,26 @@ spec:
       #   image: ghcr.io/cs-muic/scalable-p1-tnapat2000/pfinal-backend:latest
       #   command: ['python', 'manage.py', 'wait_for_database']
       containers:
-      - name: order_db
+      - name: order
         image: mariadb:latest
         ports:
           - containerPort: 3306
         env:
           - name: DB_HOST
-            value: 127.0.0.1
+            value: "127.0.0.1"
           - name: DB_PORT
-            value: 3306
+            value: "3306"
           - name: DB_USER
-            value: root
+            value: "root"
           - name: DB_PASSWORD
-            value: rootpass
+            value: "rootpass"
           - name: DB_NAME
-            value: order_db
+            value: "order_db"
+          - name: MARIADB_ROOT_PASSWORD
+            value: "rootpass"
       - name: order-api
-        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-backend:latest
+        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-order_svc:latest
         ports:
-          - containerPort:         
+          - containerPort: 3333  
       imagePullSecrets:
       - name: rush-hour-dockerconfigjson
