--- a/k8s/order-app.yaml
+++ b/k8s/order-app.yaml
@@ -32,10 +32,21 @@ spec:
       #   image: ghcr.io/cs-muic/scalable-p1-tnapat2000/pfinal-backend:latest
       #   command: ['python', 'manage.py', 'wait_for_database']
       containers:
-      - name: order
+      - name: orderdb
         image: mariadb:latest
         ports:
           - containerPort: 3306
+        env:
+          - name: MARIADB_ROOT_PASSWORD
+            value: "rootpass"
+          - name: MARIADB_DATABASE
+            value: "orderdb"
+          - name: MARIADB_ROOT_PASSWORD
+            value: "rootpass"
+      - name: order-api
+        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-order_svc:latest
+        ports:
+          - containerPort: 3333  
         env:
           - name: DB_HOST
             value: "127.0.0.1"
@@ -46,12 +57,8 @@ spec:
           - name: DB_PASSWORD
             value: "rootpass"
           - name: DB_NAME
-            value: "order_db"
-          - name: MARIADB_ROOT_PASSWORD
-            value: "rootpass"
-      - name: order-api
-        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-order_svc:latest
-        ports:
-          - containerPort: 3333  
+            value: "orderdb"
+          - name: KAFKA_ADDRESS
+            value: "kafka-broker"
       imagePullSecrets:
       - name: rush-hour-dockerconfigjson
