--- a/k8s/product-app.yaml
+++ b/k8s/product-app.yaml
@@ -32,10 +32,21 @@ spec:
       #   image: ghcr.io/cs-muic/scalable-p1-tnapat2000/pfinal-backend:latest
       #   command: ['python', 'manage.py', 'wait_for_database']
       containers:
-      - name: product
+      - name: productdb
         image: mariadb:latest
         ports:
           - containerPort: 3306
+        env:
+          - name: MARIADB_ROOT_PASSWORD
+            value: "rootpass"
+          - name: MARIADB_DATABASE
+            value: "products"
+          - name: MARIADB_ROOT_PASSWORD
+            value: "rootpass"  
+      - name: product-api
+        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-product_svc:latest
+        ports:
+          - containerPort: 8001     
         env:
           - name: DB_HOST
             value: "127.0.0.1"
@@ -46,12 +57,10 @@ spec:
           - name: DB_PASSWORD
             value: "rootpass"
           - name: DB_NAME
-            value: "product_db"
+            value: "productdb"
           - name: MARIADB_ROOT_PASSWORD
             value: "rootpass"
-      - name: product-api
-        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-product_svc:latest
-        ports:
-          - containerPort: 8001     
+          - name: KAFKA_ADDRESS
+            value: "kafka-broker"
       imagePullSecrets:
       - name: rush-hour-dockerconfigjson
