--- a/k8s/01-zookeeper.yaml
+++ b/k8s/01-zookeeper.yaml
@@ -12,6 +12,7 @@ spec:
       port: 2181
       nodePort: 30181
       targetPort: 2181
+      protocol: TCP
   selector:
     app: zookeeper
 ---
@@ -33,8 +34,11 @@ spec:
         app: zookeeper
     spec:
       containers:
-        - image: wurstmeister/zookeeper
+        - image: confluentinc/cp-zookeeper:7.0.1
           imagePullPolicy: IfNotPresent
           name: zookeeper
           ports:
             - containerPort: 2181
+          env:
+          - name: ZOOKEEPER_CLIENT_PORT
+            value: "2181"
