--- a/k8s/02-kafka.yaml
+++ b/k8s/02-kafka.yaml
@@ -8,8 +8,10 @@ metadata:
 spec:
   ports:
   - port: 9092
+    protocol: TCP
   selector:
     app: kafka-broker
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -34,12 +36,16 @@ spec:
         - name: KAFKA_BROKER_ID
           value: "1"
         - name: KAFKA_ZOOKEEPER_CONNECT
-          value: 10.108.140.26:2181
-        - name: KAFKA_LISTENERS
-          value: PLAINTEXT://127.0.0.1:9092
+          value:  10.110.185.223:2181
+        # - name: KAFKA_LISTENERS
+        #   value: PLAINTEXT://127.0.0.1:9092
         - name: KAFKA_ADVERTISED_LISTENERS
-          value: PLAINTEXT_INTERNAL://broker:29092
-        image: wurstmeister/kafka
+          value: PLAINTEXT://127.0.0.1:9092,PLAINTEXT_INTERNAL://broker:29092
+        - name: KAFKA_CREATE_TOPICS
+          value: order:1:1, payment:1:1, orchest:1:1, product:1:1
+        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+          value: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+        image: confluentinc/cp-kafka:7.0.1
         imagePullPolicy: IfNotPresent
         name: kafka-broker
         ports:
