--- a/k8s/orchest-app.yaml
+++ b/k8s/orchest-app.yaml
@@ -1,10 +1,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: rush-hour-order
+  name: rush-hour-orchest
 spec:
   selector:
-    app: rush-hour-order
+    app: rush-hour-orchest
   type:  ClusterIP
   ports:
   - name: http
