--- a/k8s/02-kafka.yaml
+++ b/k8s/02-kafka.yaml
@@ -36,11 +36,12 @@ spec:
         - name: KAFKA_BROKER_ID
           value: "1"
         - name: KAFKA_ZOOKEEPER_CONNECT
-          value:  10.110.185.223:2181
+          value: zookeeper-service
+          # value: 10.97.217.222:2181
         # - name: KAFKA_LISTENERS
         #   value: PLAINTEXT://127.0.0.1:9092
         - name: KAFKA_ADVERTISED_LISTENERS
-          value: PLAINTEXT://127.0.0.1:9092,PLAINTEXT_INTERNAL://broker:29092
+          value: PLAINTEXT://zookeeper-service:9092,PLAINTEXT_INTERNAL://broker:29092
         - name: KAFKA_CREATE_TOPICS
           value: order:1:1, payment:1:1, orchest:1:1, product:1:1
         - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
