Test kafka changes

--- a/k8s/jaeger.yaml
+++ b/k8s/jaeger.yaml
@@ -12,7 +12,7 @@ spec:
       nodeCount: 3
       redundancyPolicy: SingleRedundancy
       storage: 
-        storageClassName: gp2
+        storageClassName: standard
         size: 5Gi
     esIndexCleaner:
       enabled: true
