appled kafka service address to every service files

--- a/k8s/payment-app.yaml
+++ b/k8s/payment-app.yaml
@@ -59,6 +59,6 @@ spec:
           - name: DB_NAME
             value: "paymentdb"    
           - name: KAFKA_SERVICE_ADDRESS
-            value: "10.109.2.246"
+            value: "kafka-service"
       imagePullSecrets:
       - name: rush-hour-dockerconfigjson
